--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@ body {
     align-items: center;
     justify-content: center;
 }
+@media (max-width:700px) {
+    .search {
+        display: block;
+        
+    }
+    .search button {
+        margin-top: 20px;
+    }
+}
 .search input {
     border: 0;
     outline: 0;
